force-app/main/default/objects/PlanBenefitItem__c/PlanBenefitItem__c.object-meta.xml
<CustomObject>
    <description>Represents the details of a benefit available under a purchaser’s plan that is offered to their members.</description>
    <label>Plan Benefit Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlanBenefitItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>