force-app/main/default/objects/PlanBenefitItem__c/fields/CPTHCPCSFirstId__c.field-meta.xml
<CustomField>
    <fullName>CPTHCPCSFirstId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>First CPT or HCPCS code for this Service procedure code</inlineHelpText>
    <label>CPT First Code</label>
    <referenceTo>HealthCare_Procedure__c</referenceTo>
    <relationshipLabel>CPT First Code</relationshipLabel>
    <relationshipName>CPTFirstId</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>