force-app/main/default/objects/PlanBenefitItem__c/fields/InNetworkCoinsurancePercentage__c.field-meta.xml
<CustomField>
    <fullName>InNetworkCoinsurancePercentage__c</fullName>
    <inlineHelpText>The percentage of treatment cost the member pays for each treatment undertaken by the health plan’s preferred providers.</inlineHelpText>
    <label>InNetworkCoinsurancePercentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>