force-app/main/default/objects/PlanBenefitItem__c/fields/InNetworkCoverage__c.field-meta.xml
<CustomField>
    <fullName>InNetworkCoverage__c</fullName>
    <inlineHelpText>The amount available to contribute towards treatment costs for each treatment undertaken by the health plan’s preferred providers.</inlineHelpText>
    <label>InNetwork Coverage Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>