force-app/main/default/objects/PlanBenefitItem__c/fields/OutofNetworkCoinsurancePercentage__c.field-meta.xml
<CustomField>
    <fullName>OutofNetworkCoinsurancePercentage__c</fullName>
    <inlineHelpText>The percentage of treatment cost the member pays for treatment undertaken by non-preferred providers.</inlineHelpText>
    <label>OutofNetworkCoinsurancePercentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>