force-app/main/default/objects/PlanBenefitItem__c/fields/OutofNetworkCoverage__c.field-meta.xml
<CustomField>
    <fullName>OutofNetworkCoverage__c</fullName>
    <inlineHelpText>The amount available to contribute towards treatment costs for each treatment undertaken by non-preferred providers.</inlineHelpText>
    <label>OutofNetwork Coverage Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>