force-app/main/default/objects/PlanBenefitItem__c/fields/PlanBenefitId__c.field-meta.xml
<CustomField>
    <fullName>PlanBenefitId__c</fullName>
    <inlineHelpText>The ID of the benefit this item belongs to.</inlineHelpText>
    <label>Plan Benefit Id</label>
    <referenceTo>PlanBenefit__c</referenceTo>
    <relationshipLabel>PlanBenefitItem</relationshipLabel>
    <relationshipName>PlanBenefitItemPlanId</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>