force-app/main/default/objects/PlanBenefitItem__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <inlineHelpText>The type of service this plan benefit item provides for.</inlineHelpText>
    <label>Service Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>