force-app/main/default/objects/PlanBenefitItem__c/fields/ServiceTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceTypeCode__c</fullName>
    <inlineHelpText>The code for the type of service this plan benefit item provides for.</inlineHelpText>
    <label>Service Type Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>