force-app/main/default/objects/PlanBenefitItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CPTHCPCSFirstId__c</columns>
    <columns>CPTHCPCSLastId__c</columns>
    <columns>ServiceTypeCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>